# nextcloud_backup_script

./: .gitignore  README.md  TODO.md  backup_manager.py  backup_script.py  cli.py  config.json  config.toml  config_layout.toml  create_backup.py  create_cloud_backup  create_cloud_script  encrypt_backup.py  purge_backups.py  purge_cloud_backup  pyproject.toml  remote_backup.py  requirements.txt  test.py  upload_newest_backup.py  utils.py
create/: __init__.py  create.py  nextcloud.py
old/: upload_backup.py  upload_newest_backup.py
purge/: __init__.py  purge.py
test_env/: docker-compose.yml
transfer/: __init__.py  s3_multipart_upload.py  transfer.py  upload.py
utils/: utils.py
